// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with multiple expense 1`] = `
<div>
  <h2>
    Viewing 
    4
     expense(s) -  ₹ 
    1000
     
  </h2>
</div>
`;

exports[`should correctly render expensesSummary with single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense(s) -  ₹ 
    115
     
  </h2>
</div>
`;
